fix: project component overflow

--- a/src/components/Project/project.css
+++ b/src/components/Project/project.css
@@ -34,7 +34,7 @@
 .project--info {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  gap: 20px;
 
   width: 100%;
 
@@ -71,7 +71,7 @@
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  flex-wrap: wrap;
+
   gap: 10px;
 }
 
@@ -114,6 +114,10 @@
 
   .logos--slide.project--style p {
     font-size: 1.2rem;
+  }
+
+  .project--access {
+    flex-wrap: wrap;
   }
 }
 
